added full behavior to ListCollectionFilter, list length is again infinitely by default